# One_Key_OpenClaw

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  task.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  contributing.md  plugin-api.md  recipe-format.md
e2e/: app.spec.ts
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: error_rules.toml
src-tauri/assets/recipes/: claude-code.toml  openclaw-full.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: env_commands.rs  error_commands.rs  mod.rs  plugin_commands.rs  recipe_commands.rs  task_commands.rs
src-tauri/src/env/: mod.rs  platform.rs  platform_test.rs  prober.rs  prober_test.rs
src-tauri/src/error/: engine.rs  engine_test.rs  mod.rs
src-tauri/src/log/: pipeline.rs
src-tauri/src/plugin/: api.rs  api_test.rs  manager.rs  mod.rs
src-tauri/src/recipe/: claude-code.toml  mod.rs  openclaw-full.toml  parser.rs  registry.rs  schema.rs
src-tauri/src/task/: engine.rs  graph.rs  graph_test.rs  mod.rs  state_machine.rs  step.rs  step_test.rs
src/hooks/: useEnvProbe.ts  useLogStream.ts  useTaskRunner.ts  useTauriEvent.ts
src/ipc/: envApi.ts  errorApi.ts  pluginApi.ts  recipeApi.ts  taskApi.ts  types.ts
src/locales/: en.json  zh.json
src/pages/: DashboardPage.tsx  DeployPage.tsx  EnvCheckPage.tsx  LogPage.tsx  RecipePage.tsx  TaskFlowPage.tsx
src/store/: envStore.ts  logStore.ts  recipeStore.ts  taskStore.ts
src/utils/: format.ts  (+1 more)
(+12 files in other folders)
