[package]
name = "one_key_openclaw"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "one_key_openclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = ">=2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"
thiserror = "2"
anyhow = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
petgraph = { version = "0.6", features = ["serde-1"] }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
notify = { version = "7", features = ["macos_fsevent"] }

